<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:id="@+id/HeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="186dp"
            android:fontFamily="@font/pacifico"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="139dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/CentralLayout"
        android:layout_width="405dp"
        android:layout_height="411dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/RightLayout"
            android:layout_width="186dp"
            android:layout_height="391dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/LeftLayout"
            android:orientation="vertical">

            <EditText
                android:id="@+id/height_field"
                android:layout_width="107dp"
                android:layout_height="46dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/weight_field"
                android:layout_width="109dp"
                android:layout_height="46dp"
                android:layout_marginTop="54dp"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/age_field"
                android:layout_width="109dp"
                android:layout_height="46dp"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="170dp"
                android:layout_height="46dp"
                android:layout_marginTop="54dp"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LeftLayout"
            android:layout_width="177dp"
            android:layout_height="391dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/pacifico"
                android:text="@string/height"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:layout_conversion_absoluteHeight="80dp"
                tools:layout_conversion_absoluteWidth="133dp"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="186dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/pacifico"
                android:text="@string/weight"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:layout_conversion_absoluteHeight="78dp"
                tools:layout_conversion_absoluteWidth="133dp"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="282dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/pacifico"
                android:text="@string/age"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:layout_conversion_absoluteHeight="80dp"
                tools:layout_conversion_absoluteWidth="133dp"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="376dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/pacifico"
                android:text="@string/email"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:layout_conversion_absoluteHeight="80dp"
                tools:layout_conversion_absoluteWidth="133dp"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="472dp" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BottomLayout"
        android:layout_width="411dp"
        android:layout_height="147dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CentralLayout">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>